add helper routes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 	{% else %}
 	<title>Flask Tailwind Starter Template</title>	
 	{% endif %}
-	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.svg') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/css/main.css') }}">
 	{% endblock %}
 	
