--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,11 +13,44 @@
 	
 </head>
 <body>
+	<!-- Message flashing -->
+	{% with messages = get_flashed_messages() %}
+	{% if messages %}
+	<ul class=flashes>
+		{% for message in messages %}
+		<li class="bg-gray-700 px-6 py-2 text-white">Message: {{ message }}</li>
+		{% endfor %}
+	</ul>
+	{% endif %}
+	{% endwith %}
+
+	<!-- Flashing with filters  -->
+	{% with errors = get_flashed_messages(category_filter=["error"]) %}
+	{% if errors %}
+	<div class="alert-message block-message error">
+	  <!-- <a class="close" href="#">×</a> -->
+	  <ul>
+		{%- for msg in errors %}
+		<li>{{ msg }}</li>
+		{% endfor -%}
+	  </ul>
+	</div>
+	{% endif %}
+	{% endwith %}
+
+	<!-- Main app content here -->
 	{% block content %}
 	
 	{% endblock %}
 	{% block scripts %}
+	<!-- Load Jquery from CDN -->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<!-- Set script root correctly for local and production -->
+	<script type=text/javascript>
+		$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+		console.log("Script root is: ", $SCRIPT_ROOT)
+	  </script>
+	<!-- Load custom JS from file -->
 	<script src="{{ url_for('static', filename='dist/js/main.js') }}" defer></script>
 	{% endblock %}
 </body>
