Added JIT Compiler mode

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="bg-rose-500 text-white px-6 py-2 shadow">
+<div class="bg-pink-500 bg-green-500 text-white px-6 py-2 shadow">
 <h1>Hello World</h1>
     
 </div>
